# sample_db

./: .bandit  .copier-answers.yml  .dockerignore  .env.example  .flake8  .gitignore  .hadolint.yaml  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  .vulture.toml  .yamllint  AGENTS.md  Dockerfile  HOW_TO_TEST_IT_WORKS.md  LICENSE  Makefile  README.md  aegra.json  docker-compose.yml  e2e_auth.py  langgraph.json  mise.toml  products.csv  pyproject.toml  renovate.json5  run_e2e.sh  schema.sql  taplo.toml
.github/: dependabot.yml  zizmor.yml
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_ops.pckl  .langgraph_retry_counter.pckl
.plannotator/plans/: langgraph-sql-agent-implementa-2026-06-12-denied.md  langgraph-sql-agent-implementa-2026-06-12.annotations.md
data/: customers.csv  order_items.csv  orders.csv
db/: 00_roles.sql  01_schema.sql  02_seed.sql  03_rls.sql  validate_rls.sql
docker/: 02_load_data.sh  04_aegra_db.sh
docs/: authentication.md  docker.md  lint-strategy.md
docs/plans/: docker-containerization-spec.md  docker-containerization.workflow.mjs
scripts/e2e/: e2e_auth.py  run_e2e.sh
src/sample_db/: __init__.py  agent.py  auth.py  config.py  db.py  mint_token.py  tools.py
src/sample_db/prompts/: __init__.py  check_query_system.j2  generate_query_system.j2  loader.py
tests/: conftest.py  test_auth.py  test_config.py  test_db.py  test_e2e_auth.py  test_prompts.py  test_rls.py  test_tools.py
