[project]
name = "sample-db"
version = "0.1.0"
description = "Project description"
requires-python = ">=3.12"
dependencies = [
  "langchain",
  "langgraph",
  "langchain-openai",
  "pydantic-settings",
  "psycopg[binary]>=3.3.4",
  "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
  # Linting & formatting
  "langgraph-cli[inmem]",
  "ruff",
  "ty",
  "flake8",
  "flake8-pydantic",
  "flake8-async",
  "vulture",
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_db"]

[tool.vulture]
min_confidence = 80
paths = ["src"]
exclude = ["tests", ".venv"]
