[project]
name = "sample-db"
version = "0.1.0"
description = "Project description"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "aegra-api==0.9.21",
  "jinja2>=3.1.6",
  "langchain",
  "langchain-core",
  "langgraph",
  "langgraph-sdk",
  "langchain-openai",
  "pydantic",
  "pydantic-settings",
  "psycopg[binary]>=3.3.4",
  "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
  # Linting & formatting
  "langgraph-cli[inmem]",
  "ruff",
  "ty",
  "flake8",
  "flake8-pydantic",
  "flake8-async",
  "vulture",
  "deptry>=0.25.1",
  "bandit",
  # Testing
  "pytest",
  "pytest-xdist",
  "pytest-cov>=7.1.0",
  # Git hooks
  "prek",
  # YAML linting
  "yamllint",
  # JSON schema validation
  "check-jsonschema",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_db"]

[tool.ty.environment]
python-version = "3.12"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
# Raise once this project has a meaningful coverage baseline:
# fail_under = 80

[tool.deptry]
known_first_party = ["sample_db"]
per_rule_ignores = { DEP002 = ["aegra-api", "langchain-openai"] }
